force-app/main/default/objects/Policy_Management_Page__c/Policy_Management_Page__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the Constructor Policies Management Page</description>
    <label>Policy Management Page</label>
</CustomObject>