force-app/main/default/objects/Policy_Management_Page__c/fields/Add_Breakdown_TB_fields__c.field-meta.xml
<CustomField>
    <fullName>Add_Breakdown_TB_fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Breakdown TB fields</label>
    <type>Checkbox</type>
</CustomField>