force-app/main/default/objects/Policy_Management_Page__c/fields/Change_Fees_Text_In_Front__c.field-meta.xml
<CustomField>
    <fullName>Change_Fees_Text_In_Front__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Choose text label if the field is checked</description>
    <label>Change Fees Text In Front</label>
    <type>Checkbox</type>
</CustomField>