force-app/main/default/objects/Policy_Management_Page__c/fields/Hide_Other_Commission_Field__c.field-meta.xml
<CustomField>
    <fullName>Hide_Other_Commission_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Other Commission Field</label>
    <type>Checkbox</type>
</CustomField>