force-app/main/default/objects/Policy_Management_Page__c/fields/Lock_Endorsement_Number__c.field-meta.xml
<CustomField>
    <fullName>Lock_Endorsement_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Endorsement Number</label>
    <type>Checkbox</type>
</CustomField>