force-app/main/default/objects/Policy_Management_Page__c/fields/Remove_Income_Recognition_Date__c.field-meta.xml
<CustomField>
    <fullName>Remove_Income_Recognition_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Income Recognition Date</label>
    <type>Checkbox</type>
</CustomField>