force-app/main/default/objects/Policy_Management_Page__c/fields/Show_Income_Reason__c.field-meta.xml
<CustomField>
    <fullName>Show_Income_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Income Reason</label>
    <type>Checkbox</type>
</CustomField>