force-app/main/default/objects/Policy_Management_Page__c/fields/Show_Policy_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Show_Policy_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Policy Agreement</label>
    <type>Checkbox</type>
</CustomField>