force-app/main/default/objects/Policy_Management_Page__c/fields/Show_Sub_Agent_Agreement_From_Client__c.field-meta.xml
<CustomField>
    <fullName>Show_Sub_Agent_Agreement_From_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Sub-Agent Agreement From Client</label>
    <type>Checkbox</type>
</CustomField>